cargo-files-core/tests/snapshots/tests__basic_detection.snap
---
source: cargo-files-core/tests/tests.rs
expression: "paths.join(\"\\n\")"
---
src/lib.rs
src/test/cat.rs
src/test/mod.rs
src/whatever.rs
