cargo-files-core/tests/snapshots/tests__difference_between_mod_and_not_mod_1.snap
---
source: cargo-files-core/tests/tests.rs
expression: run_test(&krate)
---
src/a.rs
src/a/b.rs
src/a/c/mod.rs
src/lib.rs
