cargo-files-core/tests/snapshots/tests__module_in_top_level_file.snap
---
source: cargo-files-core/tests/tests.rs
expression: run_test(&krate)
---
src/discouraged.rs
src/lib.rs
src/parse.rs
