cargo-files-core/tests/snapshots/tests__nested_module_basic.snap
---
source: cargo-files-core/tests/tests.rs
expression: run_test(&krate)
---
src/inline/apple.rs
src/lib.rs
