cargo-files-core/tests/snapshots/tests__nested_module_mod_rs.snap
---
source: cargo-files-core/tests/tests.rs
expression: run_test(&krate)
---
src/apple.rs
src/inline/cat.rs
src/inline/other.rs
src/lib.rs
