cargo-files-core/tests/snapshots/tests__nested_module_non_mod_rs.snap
---
source: cargo-files-core/tests/tests.rs
expression: run_test(&krate)
---
src/apple.rs
src/apple/inline/other.rs
src/apple/inline/tat.rs
src/lib.rs
