cargo-files-core/tests/snapshots/tests__nested_module_paths.snap
---
source: cargo-files-core/tests/tests.rs
expression: run_test(&krate)
---
src/a.rs
src/canned/soup.rs
src/lib.rs
