cargo-files-core/tests/snapshots/tests__nested_module_paths_in_root.snap
---
source: cargo-files-core/tests/tests.rs
expression: run_test(&krate)
---
src/canned/soup.rs
src/lib.rs
