cargo-files-core/tests/snapshots/tests__new_module_layout.snap
---
source: cargo-files-core/tests/tests.rs
expression: run_test(&krate)
---
src/lib.rs
src/scooby.rs
src/scooby/apple.rs
src/scooby/banana.rs
