cargo-files-core/tests/snapshots/tests__path_attribute.snap
---
source: cargo-files-core/tests/tests.rs
expression: run_test(&krate)
---
src/apple.rs
src/banana/mod.rs
src/lib.rs
